modificaciones en css y html

--- a/style.css
+++ b/style.css
@@ -1,23 +1,64 @@
+*{
+   margin: 0;
+   padding: 0;
+}
+/* header{
+
+} */
 main{
    display: flex;
-   margin-top:  50px;
-   margin-left: 30px;
+   flex-wrap: wrap;
    background: #444444;
    color: #999999;
    text-shadow:1px 1px 3px #000;
    justify-content: center;
 }
-.encriptado{
-   margin-left: 2rem;
-}
+/* .encriptado{
+   /* margin-left: 2rem; */
+/* } */ */
 section{
-   margin: 1.5rem;
+   margin: 0.5rem;
 }
-textarea {
+.textarea-resize{
    resize: vertical;
-   width: 25vw;
+   width: 26vw;
    height: 45vh;
-   border-radius: 1rem;
-   padding: 1rem;
+   border-radius:0 0 1rem 1rem;
+   padding: .2vw;
+   float:left;
    /* resize: none; */
+}
+.borrador{
+   resize: vertical;
+   width: 60vw;
+   height: 4vh;
+   border-radius: 1rem;
+   padding: .5rem;
+   font-size: calc(.5 + 0.4vw);
+   /* resize: none; */
+}
+label{
+   width: 26vw;
+}
+.button{
+   width: 15.5vw;
+   height: 1.8rem;
+   border-radius: .5rem;
+   border: 1px solid black;
+   background-color: gray;
+   font-size:calc(.2rem+.3vw);
+   color:azure;
+   margin-bottom:.8rem;
+}
+h2{
+   display: flex;
+   justify-content: center;
+   font-family: monospace;
+   font-size: 1rem;
+   text-align: center;
+   border-radius:1rem 1rem 0 0;
+   border-width: 1px;
+    border-style: solid;
+    padding: .4rem;
+
 }
