--- a/style.css
+++ b/style.css
@@ -1,64 +1,85 @@
-*{
-   margin: 0;
-   padding: 0;
-}
-/* header{
-
-} */
+::placeholder {
+   color: rgb(89, 89, 160);
+font-size: 1rem;
+font-weight: normal;
+font-family: 'Courier New', Courier, monospace;}
 main{
    display: flex;
    flex-wrap: wrap;
    background: #444444;
-   color: #999999;
-   text-shadow:1px 1px 3px #000;
    justify-content: center;
+   padding: 1rem;
 }
-/* .encriptado{
-   /* margin-left: 2rem; */
-/* } */ */
-section{
-   margin: 0.5rem;
+
+.texto-original{
+   margin-right: 1vw;
+   
 }
-.textarea-resize{
+.textarea-io{
    resize: vertical;
-   width: 26vw;
+   width: 41vw;
    height: 45vh;
    border-radius:0 0 1rem 1rem;
-   padding: .2vw;
-   float:left;
-   /* resize: none; */
+   padding: .5vw;
+   font-size: 1.2rem;
+   font-weight: bold;
 }
-.borrador{
-   resize: vertical;
-   width: 60vw;
-   height: 4vh;
-   border-radius: 1rem;
-   padding: .5rem;
-   font-size: calc(.5 + 0.4vw);
-   /* resize: none; */
+.textarea-i{
+   background: rgb(205, 219, 205);
 }
+.textarea-o{
+   background: rgb(230, 206, 206);
+}
+.textarea-i{
+   background: rgb(205, 219, 205);
+}
+
 label{
-   width: 26vw;
-}
-.button{
-   width: 15.5vw;
-   height: 1.8rem;
-   border-radius: .5rem;
-   border: 1px solid black;
-   background-color: gray;
-   font-size:calc(.2rem+.3vw);
-   color:azure;
-   margin-bottom:.8rem;
+   width: 40vw;
+   font-size: 1rem;
 }
 h2{
+   height: 2.5rem;
    display: flex;
    justify-content: center;
+   align-items: center;
    font-family: monospace;
-   font-size: 1rem;
    text-align: center;
    border-radius:1rem 1rem 0 0;
    border-width: 1px;
-    border-style: solid;
-    padding: .4rem;
-
+   border-style: solid;
+   padding: .4rem;
+   background-color: #6c6969;
+   border: 1px solid black;
+   color: rgb(196, 169, 169);
+   text-shadow:2px 2px 3px #000;
 }
+
+.color-input{
+   color: rgb(167, 230, 167);
+}
+.color-output{
+   color: rgb(242, 145, 145);
+}
+
+
+
+.button{
+   width: 21.2vw;
+   height: 4.5vh;
+   border-radius: .5rem;
+   border: 1px solid black;
+   background-color: rgb(124, 117, 117);
+   font-size:.9rem;
+   margin:1vw 0;
+}
+   .borrador{
+      resize: vertical;
+      width: 84vw;
+      height: 4vh;
+      border-radius: .5rem;
+      padding: .5rem;
+      font-size: .9rem;
+      font-family: monospace;
+   
+   }
