--- a/style.css
+++ b/style.css
@@ -1,12 +1,23 @@
 ::placeholder {
-   color: rgb(89, 89, 160);
+   color: rgb(45, 45, 93);
 font-size: 1rem;
 font-weight: normal;
 font-family: 'Courier New', Courier, monospace;}
+
+header{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   height: 8vh;
+   color: rgb(177, 174, 174);
+   background-color: rgb(15, 29, 69);
+
+}
 main{
+   background-image:url(.//img/bg.png) ;
    display: flex;
    flex-wrap: wrap;
-   background: #444444;
+   /* background: #444444; */
    justify-content: center;
    padding: 1rem;
 }
@@ -23,6 +34,7 @@ main{
    padding: .5vw;
    font-size: 1.2rem;
    font-weight: bold;
+   opacity: 0.6;
 }
 .textarea-i{
    background: rgb(205, 219, 205);
@@ -31,7 +43,7 @@ main{
    background: rgb(230, 206, 206);
 }
 .textarea-i{
-   background: rgb(205, 219, 205);
+   background: rgb(164, 192, 224);
 }
 
 label{
@@ -56,7 +68,7 @@ h2{
 }
 
 .color-input{
-   color: rgb(167, 230, 167);
+   color: rgb(192, 197, 239);
 }
 .color-output{
    color: rgb(242, 145, 145);
@@ -66,20 +78,22 @@ h2{
 
 .button{
    width: 21.2vw;
-   height: 4.5vh;
+   height: 5vh;
    border-radius: .5rem;
    border: 1px solid black;
    background-color: rgb(124, 117, 117);
-   font-size:.9rem;
+   font-size:1rem;
    margin:1vw 0;
 }
    .borrador{
       resize: vertical;
       width: 84vw;
-      height: 4vh;
+      height: 10vh;
       border-radius: .5rem;
       padding: .5rem;
-      font-size: .9rem;
+      font-size: 1rem;
       font-family: monospace;
-   
+      border-bottom: 5vh;
+      opacity: 0.5;
+
    }
