--- a/style.css
+++ b/style.css
@@ -1,30 +1,34 @@
 ::placeholder {
-   color: rgb(45, 45, 93);
+   color: white;
 font-size: 1rem;
-font-weight: normal;
+font-weight: 300;
 font-family: 'Courier New', Courier, monospace;}
 
 header{
    display: flex;
    flex-direction: column;
+   justify-content: center;
    align-items: center;
-   height: 8vh;
+   height: 10vh;
    color: rgb(177, 174, 174);
    background-color: rgb(15, 29, 69);
-
 }
+header p{
+   font-size: .9rem
+}
+
 main{
+   border-top: 1px solid gray;
+   border-bottom: 2px solid gray;
    background-image:url(.//img/bg.png) ;
    display: flex;
    flex-wrap: wrap;
-   /* background: #444444; */
    justify-content: center;
    padding: 1rem;
 }
 
 .texto-original{
-   margin-right: 1vw;
-   
+   margin-right: 1vw;   
 }
 .textarea-io{
    resize: vertical;
@@ -33,24 +37,24 @@ main{
    border-radius:0 0 1rem 1rem;
    padding: .5vw;
    font-size: 1.2rem;
-   font-weight: bold;
-   opacity: 0.6;
+   font-weight: 300;
+   border-bottom: 1px solid white;
+   border-left: 1px solid white;
+   border-right: 1px solid white;
 }
 .textarea-i{
-   background: rgb(205, 219, 205);
+   background: rgba(164, 192, 224,.7);
 }
 .textarea-o{
-   background: rgb(230, 206, 206);
-}
-.textarea-i{
-   background: rgb(164, 192, 224);
+   background: rgba(250, 26, 26,.7);
+   color: white;
 }
 
 label{
-   width: 40vw;
+   width: 41vw;
    font-size: 1rem;
 }
-h2{
+label h2{
    height: 2.5rem;
    display: flex;
    justify-content: center;
@@ -58,42 +62,55 @@ h2{
    font-family: monospace;
    text-align: center;
    border-radius:1rem 1rem 0 0;
+   border: 1px solid white;
    border-width: 1px;
    border-style: solid;
    padding: .4rem;
-   background-color: #6c6969;
-   border: 1px solid black;
-   color: rgb(196, 169, 169);
-   text-shadow:2px 2px 3px #000;
+   background-color: rgba(83, 80, 80,.7);
+
 }
 
-.color-input{
-   color: rgb(192, 197, 239);
+.color-io{
+   color: rgb(202, 206, 238);
 }
-.color-output{
-   color: rgb(242, 145, 145);
-}
-
-
 
 .button{
    width: 21.2vw;
    height: 5vh;
    border-radius: .5rem;
-   border: 1px solid black;
-   background-color: rgb(124, 117, 117);
-   font-size:1rem;
+   border: 1px solid white;
+   background-color: rgba(124, 117, 117,.8);
+   box-shadow: 2px 2px 3px #000;
+   font-size:.8rem;
    margin:1vw 0;
+   color: white;
 }
-   .borrador{
-      resize: vertical;
-      width: 84vw;
-      height: 10vh;
-      border-radius: .5rem;
-      padding: .5rem;
-      font-size: 1rem;
-      font-family: monospace;
-      border-bottom: 5vh;
-      opacity: 0.5;
+button.copiar, .borrar{
+   width: 14vw;
+}
 
-   }
+.borrar, .copiar{
+   background-color: rgba(4, 4, 80,.7);
+   color: white;
+}
+.borrador{
+   resize: vertical;
+   width: 84vw;
+   height: 10vh;
+   border-radius: .5rem;
+   padding: .5rem;
+   font-size: 1rem;
+   font-family: monospace;
+   border-bottom: 5vh;
+   background: rgba(00, 00, 00,.6);
+   border: 1px solid white;
+}
+footer{
+   height: 5vh;
+   font-size: 0.7rem;
+   color: white;
+   background-color: rgb(29, 28, 28);
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
