terminado sin redes sociales

--- a/style.css
+++ b/style.css
@@ -4,14 +4,18 @@ font-size: 1rem;
 font-weight: 300;
 font-family: 'Courier New', Courier, monospace;}
 
+html{
+   background-image:url(.//img/bg.png) ;
+}
 header{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 10vh;
-   color: rgb(177, 174, 174);
-   background-color: rgb(15, 29, 69);
+   color: rgb(200, 195, 195);
+   background-color: rgba(11, 21, 48, 0.7);
+   font-size: 1.2rem;
 }
 header p{
    font-size: .9rem
@@ -20,7 +24,6 @@ header p{
 main{
    border-top: 1px solid gray;
    border-bottom: 2px solid gray;
-   background-image:url(.//img/bg.png) ;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
@@ -32,7 +35,7 @@ main{
 }
 .textarea-io{
    resize: vertical;
-   width: 41vw;
+   width: 44vw;
    height: 45vh;
    border-radius:0 0 1rem 1rem;
    padding: .5vw;
@@ -41,6 +44,8 @@ main{
    border-bottom: 1px solid white;
    border-left: 1px solid white;
    border-right: 1px solid white;
+   font-size:clamp(.6rem, calc(.6rem + 0.6vw), 1.2rem);
+
 }
 .textarea-i{
    background: rgba(164, 192, 224,.7);
@@ -51,8 +56,8 @@ main{
 }
 
 label{
-   width: 41vw;
-   font-size: 1rem;
+   width: 44vw;
+   font-size:clamp(.5rem, calc(.5rem + 0.6vw), 1.20rem);
 }
 label h2{
    height: 2.5rem;
@@ -75,27 +80,31 @@ label h2{
 }
 
 .button{
+   display: inline-block;
    width: 21.2vw;
    height: 5vh;
    border-radius: .5rem;
    border: 1px solid white;
    background-color: rgba(124, 117, 117,.8);
    box-shadow: 2px 2px 3px #000;
-   font-size:.8rem;
-   margin:1vw 0;
+   font-size:clamp(.3rem, calc(.3rem + 0.6vw), 1.2rem);
+   margin:2vw 0;
    color: white;
 }
 button.copiar, .borrar{
-   width: 14vw;
+   width: 15.8vw;
 }
-
+.icono{
+   width: 1.5rem;
+   height: auto;
+}
 .borrar, .copiar{
    background-color: rgba(4, 4, 80,.7);
    color: white;
 }
 .borrador{
    resize: vertical;
-   width: 84vw;
+   width: 89.5vw;
    height: 10vh;
    border-radius: .5rem;
    padding: .5rem;
@@ -104,6 +113,7 @@ button.copiar, .borrar{
    border-bottom: 5vh;
    background: rgba(00, 00, 00,.6);
    border: 1px solid white;
+   margin-top: 1vh;
 }
 footer{
    height: 5vh;
