--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ font-family: 'Courier New', Courier, monospace;}
 html{
    background-image:url(.//img/bg.png) ;
 }
+
 header{
    display: flex;
    flex-direction: column;
@@ -17,6 +18,7 @@ header{
    background-color: rgba(11, 21, 48, 0.7);
    font-size: 1.2rem;
 }
+
 header p{
    font-size: .9rem
 }
@@ -33,6 +35,7 @@ main{
 .texto-original{
    margin-right: 1vw;   
 }
+
 .textarea-io{
    resize: vertical;
    width: 44vw;
@@ -50,15 +53,26 @@ main{
 .textarea-i{
    background: rgba(164, 192, 224,.7);
 }
+.textarea-i:hover{
+   background-color: rgba(164, 192, 224,.5);
+   transition:background-color 0.4s ease ;
+}
+
 .textarea-o{
    background: rgba(250, 26, 26,.7);
    color: white;
+}
+
+.textarea-o:hover{
+   background-color: rgba(250, 26, 26,.5);
+   transition:background-color 0.4s ease ;
 }
 
 label{
    width: 44vw;
    font-size:clamp(.5rem, calc(.5rem + 0.6vw), 1.20rem);
 }
+
 label h2{
    height: 2.5rem;
    display: flex;
@@ -91,17 +105,33 @@ label h2{
    margin:1vw 0;
    color: white;
 }
+
+.button:hover{
+   font-size: calc(.3rem + 0.8vw);
+   background-color: rgba(124, 117, 117,.5);
+}
+
 button.copiar, .borrar{
    width: 15.8vw;
 }
-.icono{
-   width: 1.5rem;
-   height: auto;
-}
+
 .borrar, .copiar{
    background-color: rgba(4, 4, 80,.7);
    color: white;
 }
+
+.borrar:hover{
+   background-color: rgba(4, 4, 80,.1);
+   font-size: calc(.3rem + 0.7vw);
+   color: white;
+} 
+
+.copiar:hover{
+   background-color: rgba(4, 4, 80,.1);
+   font-size: calc(.3rem + 0.7vw);
+   color: white;
+}
+
 .borrador{
    resize: vertical;
    width: 89.5vw;
@@ -114,12 +144,18 @@ button.copiar, .borrar{
    background: rgba(00, 00, 00,.6);
    border: 1px solid white;
 }
+
 footer{
-   height: 7vh;
+   display: flex;
+   flex-direction: column ;
+   justify-content: space-evenly;
+   align-items: center;
+   height: 10vh;
    font-size: 0.9rem;
    color: white;
    background-color: rgb(29, 28, 28);
-   display: flex;
-   justify-content: center;
-   align-items: center;
+}
+
+.copyright{
+   font-size: calc(.2rem + 0.7vw);
 }
